--- a/Writeups/hackthebox-ancient-cipher/hackthebox-ancient-cipher.html
+++ b/Writeups/hackthebox-ancient-cipher/hackthebox-ancient-cipher.html
@@ -201,7 +201,7 @@ H: 4 (8.5%)
 
     <span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Detected shift: </span><span class="si">{</span><span class="n">key</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
     <span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Decrypted message: </span><span class="si">{</span><span class="n">decrypted</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
-    <span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Flag format: HTB</span><span class="se">{{</span><span class="si">{</span><span class="n">decrypted</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39; &#39;</span><span class="p">,</span><span class="w"> </span><span class="s1">&#39;_&#39;</span><span class="p">)</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span><span class="si">}</span><span class="se">}}</span><span class="s2">&quot;</span><span class="p">)</span>
+    <span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Flag format: HTB</span><span class="se">{{</span><span class="s2">decrypted.replace(&#39; &#39;, &#39;_&#39;).lower()</span><span class="se">}}</span><span class="s2">&quot;</span><span class="p">)</span>
 </code></pre></div>
 
 <h2 id="key-lessons-learned">Key Lessons Learned</h2>
