--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
                             </div>
                             <div class="contact-details">
                                 <h3>Availability</h3>
-                                <p>Monday - Friday: 9:00 AM - 6:00 PM (EST)</p>
+                                <p>Monday - Friday: 9:00 AM - 6:00 PM (IST)</p>
                                 <span class="response-time">24/7 Emergency Response Available</span>
                             </div>
                         </div>
@@ -156,15 +156,15 @@
                     <div class="social-section">
                         <h3>Connect on Social</h3>
                         <div class="social-links-large">
-                            <a href="#" class="social-link" aria-label="GitHub">
+                            <a href="https://github.com/RootUser-GeetanshAditya/" class="social-link" aria-label="GitHub" target="_blank">
                                 <i class="fab fa-github"></i>
                                 <span>GitHub</span>
                             </a>
-                            <a href="#" class="social-link" aria-label="LinkedIn">
+                            <a href="https://www.linkedin.com/in/geetansh-aditya/" class="social-link" aria-label="LinkedIn" target="_blank">
                                 <i class="fab fa-linkedin"></i>
                                 <span>LinkedIn</span>
                             </a>
-                            <a href="#" class="social-link" aria-label="Twitter">
+                            <a href="https://x.com/Geetansh_Aditya" class="social-link" aria-label="Twitter" target="_blank">
                                 <i class="fab fa-twitter"></i>
                                 <span>Twitter</span>
                             </a>
