--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                     <div class="hero-buttons">
                         <a href="blogs.html" class="btn btn-primary">View Blogs</a>
                         <a href="contact.html" class="btn btn-secondary">Hire Me</a>
+                        <a href="assets/Geetansh_Aditya_Security_Engineer_Red_Blue_Team.pdf" class="btn btn-tertiary" download>Resume</a>
                     </div>
                 </div>
                 <div class="hero-graphic">
