--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NYX Cybersecurity - About</title>
+    <title>Geetansh Cybersecurity - About</title>
     <meta name="description" content="Geetansh Aditya - Professional Cybersecurity Specialist | Reverse Engineering, DFIR, Penetration Testing, Exploit Development">
     <meta name="keywords" content="cybersecurity, reverse engineering, DFIR, penetration testing, exploit development, malware analysis">
     
