--- a/blogs.html
+++ b/blogs.html
@@ -73,11 +73,11 @@
             <div class="content-grid">
                 
             <article class="content-card">
-                <h3><a href="Blog/DarkGate-Malware-Analysis/DarkGate-Malware-Analysis.html">Unmasking DarkGate: 8 Deobfuscation Layers of 1040doc_pdf.lnk</a></h3>
+                <h3><a href="Blog/DarkGate-Malware-Analysis/DarkGate-Malware-Analysis.html">Unmasking DarkGate: 8 Deobfuscation Layers of 1040doc_pdf.lnk (Malware Analysis 2025)</a></h3>
                 <p class="excerpt">Malware analysis is a critical skill and involves examining the malicious software to understand its behavior, capabilities and potential impact. Usin...</p>
                 <div class="meta">
                     <span class="date">2025-08-10</span>
-                    <div class="tags"><span class="tag">[DarkGate, malware-analysis, reverse-engineering, deobfuscation, lnk-malware]</span></div>
+                    <div class="tags"><span class="tag">[DarkGate malware 2025, DarkGate LNK loader, DarkGate reverse engineering, DarkGate deobfuscation analysis]</span></div>
                 </div>
                 <a href="Blog/DarkGate-Malware-Analysis/DarkGate-Malware-Analysis.html" class="read-more-btn">Read More</a>
             </article>
