--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geetansh Cybersecurity - Services</title>
+    <title>Geetansh Aditya | Cybersecurity Specialist - Reverse Engineering & DFIR</title>
     <meta name="description" content="Geetansh Aditya - Professional Cybersecurity Specialist | Reverse Engineering, DFIR, Penetration Testing, Exploit Development">
     <meta name="keywords" content="cybersecurity, reverse engineering, DFIR, penetration testing, exploit development, malware analysis">
     <link rel="icon" type="image/x-icon" href="assets/favicon.svg">
