--- a/writeups.html
+++ b/writeups.html
@@ -73,15 +73,17 @@
             <div class="content-grid">
                 
             <article class="content-card">
-                <h3><a href="Writeups/hackthebox-ancient-cipher/hackthebox-ancient-cipher.html">HackTheBox - Crypto Challenge "Ancient Cipher"</a></h3>
-                <p class="excerpt">HackTheBox - Ancient Cipher Writeup
-**Challenge Info:** This writeup covers a medium-difficulty cryptography challenge from HackTheBox involving class...</p>
+                <h3><a href="Writeups/hackthebox-holmes-ctf-2025-the-payload/hackthebox-holmes-ctf-2025-the-payload.html">Holmes CTF 2025: The Payload – Step-by-Step Malware Analysis</a></h3>
+                <p class="excerpt">The Payload in a Hard challenge from the Holmes CTF 2025 hosted by HackTheBox. This is of the Malware Reversing category.
+
+Challenge Description
+This ...</p>
                 <div class="meta">
-                    <span class="date">2024-08-12</span>
-                    <span class="category">Crypto</span>
-                    <div class="tags"><span class="tag">[cryptography, substitution-cipher, python, hackthebox]</span></div>
+                    <span class="date">2025-09-27</span>
+                    <span class="category">CTF Malware Analysis</span>
+                    <div class="tags"><span class="tag">[The Payload, holmes-ctf, reverse-engineering]</span></div>
                 </div>
-                <a href="Writeups/hackthebox-ancient-cipher/hackthebox-ancient-cipher.html" class="read-more-btn">Read Writeup</a>
+                <a href="Writeups/hackthebox-holmes-ctf-2025-the-payload/hackthebox-holmes-ctf-2025-the-payload.html" class="read-more-btn">Read Writeup</a>
             </article>
             
             </div>
