Malware Analysis 2025 blog add

--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
             <div class="content-grid">
                 
             <article class="content-card">
+                <h3><a href="Blog/Malware-Analysis-2025/Malware-Analysis-2025.html">Are Malware Analysts Still Needed in 2025?</a></h3>
+                <p class="excerpt">Malware Analysis has evolved rapidly. Automated sandboxes like ANY.RUN and scanning giants like VirusTotal are now part of every analyst’s toolbox. Ho...</p>
+                <div class="meta">
+                    <span class="date">2025-11-26</span>
+                    <div class="tags"><span class="tag">[malware-analysis, reverse-engineering, sandbox-evasion, VirusTotal, ANYRUN]</span></div>
+                </div>
+                <a href="Blog/Malware-Analysis-2025/Malware-Analysis-2025.html" class="read-more-btn">Read More</a>
+            </article>
+            
+            <article class="content-card">
                 <h3><a href="Blog/DarkGate-Malware-Analysis/DarkGate-Malware-Analysis.html">Unmasking DarkGate: 8 Deobfuscation Layers of 1040doc_pdf.lnk (Malware Analysis 2025)</a></h3>
                 <p class="excerpt">Malware analysis is a critical skill and involves examining the malicious software to understand its behavior, capabilities and potential impact. Usin...</p>
                 <div class="meta">
